openmediavault (5.2.0-1) unstable; urgency=low

  * Rename RPC Apt::upgrade to Apt::install to install specified packages.
    Introduce a new RPC Apt::upgrade to execute a normal APT upgrade.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 16 Dec 2019 12:34:30 +0100

openmediavault (5.1.3-1) unstable; urgency=low

  * Change OMV_SAMBA_FRUIT_MODEL default value to 'TimeCapsule'.
  * Fix bug in SMB recycle bin cleanup script.
  * Monitor proftpd to ensure it comes up correctly on system starts.
  * Issue #490: Don't display canonical filesystem device names.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 03 Dec 2019 23:18:08 +0100

openmediavault (5.1.2-1) unstable; urgency=low

  * Use periodic filesystem trim instead of online.
  * Issue #522: SSH private key has incorrect format (missing line
    breaks).
  * Issue #523: Modify the content of monit emails.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 27 Nov 2019 08:37:44 +0100

openmediavault (5.1.1-1) unstable; urgency=low

  * Change OMV_SAMBA_FRUIT_MODEL default value to 'MacSamba'. Change
    'sys=waMa=0,adVF=0x100' to 'sys=adVF=0x100' like Samba is doing it.
  * Issue #514: List filesystems inside a LXC Containers.
  * Issue #516: Reconfigure Avahi/Zeroconf when a SMB share is created,
    modified or deleted.
  * Issue #517: Added OMV_WSDD_OPTIONS to customize the wsdd command
    line arguments.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 22 Nov 2019 15:06:18 +0100

openmediavault (5.1.0-1) unstable; urgency=low

  * Update locales.
  * Modify Notification RPCs.
  * Issue #467: Form fieldsets not showing titles in Safari browser.
  * Issue #503: Respect OMV_SAMBA_FRUIT_MODEL in Avahi SMB/CIFS service
    configuration. Defaults to 'MacPro'.
  * Issue #510: Fix issues in /etc/hosts.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 10 Nov 2019 22:05:55 +0100

openmediavault (5.0.14-1) unstable; urgency=low
