@@ -22,8 +22,14 @@
 			"default": 25
 		},
 		"tls": {
-			"type": "boolean",
-			"default": false
+			"type": "string",
+			"enum": [
+				"none",
+				"ssl",
+				"starttls",
+				"auto"
+			],
+			"default": "none"
 		},
 		"sender": {
 			"type": "string",
